@@ -33,6 +33,7 @@ Maintenance
 * Remove invalid characters from badly-encoded UTF-8 strings (impacts PostgreSQL)
 * Orthanc starts even if jobs from a previous execution cannot be unserialized
 * New CMake option "ENABLE_DCMTK_LOG" to disable logging internal to DCMTK
+* Fix issue 114 (Boost 1.68 doesn't support SHA-1 anymore)
 * Upgraded dependencies for static and Windows builds:
   - boost 1.68.0
 
